# WeldingStreamlit

./: ClassificationGraph.csv  ConsolidatedWeldData.csv  QualityGraphData.csv  Weld Sample Data.csv  WeldData.csv  WeldingStreamlit.py  pyproject.toml  requirements.txt
