[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.1.0",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
    "streamlit-elements>=0.1.0",
    "streamlit>=1.49.1",
]
